Fix gaps

--- a/_sass/layout/projects.scss
+++ b/_sass/layout/projects.scss
@@ -41,7 +41,7 @@
 .project-description {
   font-size: $project-description-font-size;
   padding-bottom: $grid-gap;
-  padding-top: $grid-gap / 2;
+  padding-top: $grid-gap / 4;
 }
 
 .project-buttons {
