--- a/_sass/layout/publications.scss
+++ b/_sass/layout/publications.scss
@@ -30,7 +30,7 @@
   display: flex;
   flex-direction: column;
   font-size: $publication-font-size;
-  gap: $grid-gap / 5;
+  gap: $grid-gap / 6;
   grid-area: description;
   text-align: justify;
 
